crates/haneul/tests/snapshots/ptb_files_tests__not_keywords.ptb.snap
---
source: crates/haneul/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === PREVIEW === 
╭────────────────────────────╮
│ PTB Preview                │
├────────────┬───────────────┤
│ command    │ values        │
├────────────┼───────────────┤
│ assign     │ gasa @0x1     │
│ assign     │ somea @0x1    │
│ assign     │ nonea @0x1    │
│ assign     │ vectora @0x1  │
│ assign     │ gas-a @0x1    │
│ assign     │ some-a @0x1   │
│ assign     │ none-a @0x1   │
│ assign     │ vector-a @0x1 │
├────────────┼───────────────┤
│ gas-budget │ 11            │
╰────────────┴───────────────╯
 === BUILT PTB === 
